--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
     "@monarchwadia/conways-game-engine": "^1.1.0",
     "fabric": "^4.3.0",
     "parcel-bundler": "^1.12.4"
+  },
+  "browserslist": [
+    "last 1 Chrome version"
+  ],
+  "devDependencies": {
+    "parcel-plugin-static-files-copy": "^2.5.0"
   }
 }
